# rust-grpc-demo

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
proto/: store.proto
src/: cli.rs  main.rs  server.rs  store.rs
